--- a/client/src/components/Home.module.scss
+++ b/client/src/components/Home.module.scss
@@ -2,7 +2,8 @@ html {
     padding: 50px 200px;
 }
 
-.usernameWrapper {
+.username-wrapper {
+    color: blue;
     font-size: 24px;
     text-align: center;
 }
