--- a/client/src/components/Home.module.scss
+++ b/client/src/components/Home.module.scss
@@ -1,13 +1,21 @@
 html {
-  padding: 50px 200px;
+  padding: 100px 200px;
   font-family: "Montserrat", sans-serif;
   background-color: #ffffff;
 }
 
-.username-wrapper {
+body {
+  margin: 0;
+}
+
+.username-input {
   color: blue;
-  font-size: 24px;
+  font-size: 32px;
   text-align: center;
+  width: 100%;
+  height: 50px;
+  border-radius: 16px;
+  box-sizing: border-box;
 }
 
 .name-question {
