--- a/client/src/components/Home/Home.module.scss
+++ b/client/src/components/Home/Home.module.scss
@@ -1,12 +1,18 @@
 html {
-  padding: 100px 200px;
   font-family: "Montserrat", sans-serif;
   background-color: #ecdfcc;
+  //
 }
 
-body {
-  margin: 0;
+.home-container {
+  padding-top: 100px;
+  max-width: 600px;
+  margin: auto;
 }
+
+// body {
+//
+// }
 
 .username-wrapper {
   display: flex;
@@ -15,7 +21,7 @@ body {
 
 .username-input {
   background-color: transparent;
-  font-size: 32px;
+  font-size: 38px;
   text-align: center;
   width: 50%;
   height: 50px;
@@ -43,17 +49,16 @@ body {
   width: 90%;
 }
 
-.button-wrapper {
-  display: flex;
-  justify-content: center;
-}
-
 .room-list-wrapper {
   margin-top: 50px;
 }
 
-.button-wrapper {
+.button-container {
   display: flex;
   justify-content: center;
   margin-top: 24px;
+}
+
+.toast-class {
+  font-size: 16px;
 }
