css added, hostRoom expanded, bugs fixed, joining room through URL managed, restrictions and UI elements added

--- a/client/src/components/Button/Button.module.scss
+++ b/client/src/components/Button/Button.module.scss
@@ -12,6 +12,15 @@
     background-color: #640d60b2;
   }
 
+  &.disabled {
+    cursor: not-allowed;
+    background-color: #bfbfbf85;
+
+    &:hover {
+      background-color: #bfbfbf85;
+    }
+  }
+
   & .button-wrapper {
     display: flex;
     align-items: center;
