--- a/client/src/components/CardSelector.module.scss
+++ b/client/src/components/CardSelector.module.scss
@@ -15,17 +15,38 @@
   justify-content: center;
   flex-direction: column;
   font-size: 50px;
-  transition: background-color 0.2s ease-in-out, transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
   background: linear-gradient(white, transparent);
 
+  transition: background-color 0.2s ease-in-out, transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  // transition: 1s ease-in-out;
+
   &:hover {
-    background-color: rgba(0, 0, 0, 0.301);
+    background-color: #b58f2762;
     cursor: pointer;
   }
 
   &.selected {
-    background-color: #46ff656e;
+    position: relative;
+    // background-color: #b58e27;
+    // background: linear-gradient(white 1%, transparent);
+    // background: linear-gradient(white, #d4af37,;
+    background: linear-gradient(#b58e27, #f4e185);
     transform: translateY(-16px);
+    transition: 1s ease-in-out;
+    color: white;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to right, #b58e27, #f4e185); /* Gradient on Hover */
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+      z-index: 1;
+    }
   }
 
   &.done {
