--- a/client/src/components/UsersCards.module.scss
+++ b/client/src/components/UsersCards.module.scss
@@ -9,7 +9,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  padding: 40px 10px 0;
+  padding: 46px 10px 0;
   position: relative;
 
   .container-header {
@@ -22,120 +22,6 @@
     font-size: 20px;
     font-weight: bold;
     color: #ecdfcc;
+    padding: 4px 0;
   }
-}
-
-.user-wrapper {
-  margin: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-
-  .username {
-    position: absolute;
-    top: -20px;
-    margin: 0 0 4px;
-
-    &.my-name {
-      font-weight: bold;
-    }
-  }
-}
-
-.card-wrapper {
-  width: 80px;
-  height: 100px;
-  border: 2px solid #adadad;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  font-size: 50px;
-  transition: background-color 0.2s ease-in-out;
-
-  &.my-card {
-    background-color: #ffffffb3;
-  }
-
-  &.voted {
-    background-color: #46ff656e;
-
-    &.my-card {
-      background-color: #46ff65;
-    }
-  }
-
-  &.didnt-vote {
-    background-color: #ff565682;
-
-    &.my-card {
-      background-color: #ff5656;
-    }
-  }
-
-  .user-skipped {
-    margin-top: 8px;
-    text-align: center;
-    font-size: 12px;
-  }
-}
-
-.result-container {
-  padding: 10px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-
-  &.empty {
-    justify-content: center;
-    text-align: center;
-  }
-}
-
-.single-result {
-  display: flex;
-  align-items: center;
-  margin: 5px;
-
-  .result-value {
-    font-weight: bold;
-    font-size: 22px;
-  }
-}
-
-.average-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-
-  .text {
-    font-size: 24px;
-  }
-
-  .number {
-    font-size: 50px;
-  }
-
-  .no-votes {
-    font-size: 24px;
-  }
-}
-
-.divider {
-  height: 1px;
-  background-color: gray;
-}
-
-.result-card {
-  height: 30px;
-  width: 24px;
-  border: 1px solid #7f7f7f;
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 10px;
 }
