--- a/client/src/components/Rooms/RoomComponents/SingleCard.module.scss
+++ b/client/src/components/Rooms/RoomComponents/SingleCard.module.scss
@@ -30,23 +30,15 @@
   background: linear-gradient(white, transparent);
 
   &.my-card {
-    // background-color: #6969fff0;
+    border: 2px solid #000000;
   }
 
   &.voted {
-    background-color: #008000db;
-
-    &.my-card {
-      background-color: #6969fff0;
-    }
+    background-color: #00b100ba;
   }
 
   &.didnt-vote {
-    background-color: #ff4646;
-
-    &.my-card {
-      background-color: #6969fff0;
-    }
+    background-color: #ff8f8f;
   }
 
   .user-skipped {
