additional changes to structure and edge cases managment added

--- a/client/src/components/Rooms/GuestRoom/GuestRoom.module.scss
+++ b/client/src/components/Rooms/GuestRoom/GuestRoom.module.scss
@@ -1,9 +1,4 @@
-.room-container {
-  padding-top: 100px;
-  max-width: 800px;
-  margin: auto;
-}
-
 .header {
   text-align: center;
+  margin-top: 0;
 }
