--- a/client/src/components/TopBar/TopBar.module.scss
+++ b/client/src/components/TopBar/TopBar.module.scss
@@ -1,5 +1,5 @@
 .top-bar {
-  background-color: #6975658a;
+  background-color: #9cad96;
   position: fixed;
   width: 100%;
   height: 50px;
@@ -9,4 +9,6 @@
   align-items: center;
   padding: 0 16px;
   box-sizing: border-box;
+  z-index: 2;
+  box-shadow: 0 15px 20px 4px #0000005e;
 }
