--- a/client/src/components/Rooms/HostRoom/HostRoom.module.scss
+++ b/client/src/components/Rooms/HostRoom/HostRoom.module.scss
@@ -15,6 +15,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  text-align: center;
 
   .url {
     font-size: 24px;
