--- a/client/src/components/TopBar/TopBar.module.scss
+++ b/client/src/components/TopBar/TopBar.module.scss
@@ -12,3 +12,10 @@
   z-index: 2;
   box-shadow: 0 15px 20px 4px #0000005e;
 }
+
+.version-number {
+  bottom: 12px;
+  opacity: 0.2;
+  position: fixed;
+  right: 12px;
+}
